examples/expected/check_invalid_return.txt
error[E2006]: return type mismatch: expected I64, got Unit
  --> examples/invalid_return.tp:2:2
   |
 2 | 	if x > 0 {
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^
